fix: set correct gap value + apply correct col breakpoints value

--- a/packages/core/components/grid/grid.scss
+++ b/packages/core/components/grid/grid.scss
@@ -3,7 +3,7 @@
 .grid {
     display: grid;
     grid-template-columns: repeat($column-number-s, 1fr);
-    gap: $positive-spacing_150;
+    column-gap: $positive-spacing_150;
     padding: 0 $positive-spacing_200;
     margin: auto;
 
@@ -13,7 +13,7 @@
 
     @media (min-width: $breakpoints-m) {
         grid-template-columns: repeat($column-number-l, 1fr);
-        gap: $positive-spacing_200;
+        column-gap: $positive-spacing_200;
         padding: 0 $positive-spacing_400;
     }
 
@@ -41,6 +41,11 @@
     .col-xs-#{$i} {
       grid-column: span #{$i};
     }
+  }
+}
+
+@media (min-width: $breakpoints-s) {
+  @for $i from 1 through 12 {
     .col-s-#{$i} {
       grid-column: span #{$i};
     }
@@ -52,7 +57,19 @@
     .col-m-#{$i} {
       grid-column: span #{$i};
     }
+  }
+}
+
+@media (min-width: $breakpoints-l) {
+  @for $i from 1 through 12 {
     .col-l-#{$i} {
+      grid-column: span #{$i};
+    }
+  }
+}
+@media (min-width: $breakpoints-xl) {
+  @for $i from 1 through 12 {
+    .col-xl-#{$i} {
       grid-column: span #{$i};
     }
   }
